// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoginPage > should render 1`] = `
<div>
  <div
    class="login-page"
  >
    <h1
      class="login-page-title"
    >
      Log in to Twitter
    </h1>
    <form>
      <div
        class="form-field"
      >
        <label
          class="form-field-label"
        >
          <span>
            phone, email or username
          </span>
          <input
            autocomplete="off"
            class="form-field-input"
            name="username"
            type="text"
            value=""
          />
        </label>
      </div>
      <div
        class="form-field"
      >
        <label
          class="form-field-label"
        >
          <span>
            password
          </span>
          <input
            autocomplete="off"
            class="form-field-input"
            name="password"
            type="password"
            value=""
          />
        </label>
      </div>
      <button
        class="sc-bXdtCk DqBej login-form-submit"
        disabled=""
        type="submit"
      >
        Log in
      </button>
    </form>
  </div>
</div>
`;

exports[`LoginPage > should render error 1`] = `
<div>
  <div
    class="login-page"
  >
    <h1
      class="login-page-title"
    >
      Log in to Twitter
    </h1>
    <form>
      <div
        class="form-field"
      >
        <label
          class="form-field-label"
        >
          <span>
            phone, email or username
          </span>
          <input
            autocomplete="off"
            class="form-field-input"
            name="username"
            type="text"
            value=""
          />
        </label>
      </div>
      <div
        class="form-field"
      >
        <label
          class="form-field-label"
        >
          <span>
            password
          </span>
          <input
            autocomplete="off"
            class="form-field-input"
            name="password"
            type="password"
            value=""
          />
        </label>
      </div>
      <button
        class="sc-bXdtCk DqBej login-form-submit"
        disabled=""
        type="submit"
      >
        Log in
      </button>
    </form>
    <div
      class="login-page-error"
      role="alert"
    >
      Wrong username/password
    </div>
  </div>
</div>
`;
